--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "@rishijay/prettier-config",
-  "version": "1.0.1-alpha.1",
-  "description": "My Custom Prettier Config",
+  "type": "module",
+  "version": "1.0.3",
+  "description": "Prettier Config",
+  "keywords": [
+    "Prettier",
+    "Rishijay",
+    "Settings"
+  ],
   "main": "index.json",
   "repository": "git@github.com:rishijay/prettier-config.git",
   "author": "Rishijay Shrivastava",
   "license": "MIT",
   "scripts": {
     "postinstall": "node postinstall.js"
+  },
+  "dependencies": {
+    "chalk": "^5.2.0"
   }
 }
